samples/_failures_safe/1761216264_759e5f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ea15f1f7.c: In function ‘main’:
./samples/SAFE/__tmp_ea15f1f7.c:162:49: error: expected ‘)’ at end of input
  162 |                 if (add_matrices(&a, &b, &result
      |                                 ~               ^
      |                                                 )
./samples/SAFE/__tmp_ea15f1f7.c:162:17: error: expected declaration or statement at end of input
  162 |                 if (add_matrices(&a, &b, &result
      |                 ^~
./samples/SAFE/__tmp_ea15f1f7.c:162:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ea15f1f7.c:162:17: error: expected declaration or statement at end of input
